--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,8 @@ jobs:
       #    DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       #    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker build
-        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' }}
+        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch') }}
+        #if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' }}
         run: |
           cd ${{ env.FOLDER }}
           bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag ${{ matrix.TAG }}            
