--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,7 @@ jobs:
       #    DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       #    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker build
-        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' || (github.event_name == 'workflow_dispatch') }}
+        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' || (github.event_name == 'workflow_dispatch') }}
         #if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'pull_request' }}
         run: |
           cd ${{ env.FOLDER }}
