--- a/.github/workflows/docker-arm.yml
+++ b/.github/workflows/docker-arm.yml
@@ -22,17 +22,17 @@ jobs:
         TAG: [latest,'']
     steps:
       - uses: actions/checkout@v2
-      #- name: Docker build and push
-      #  if: ${{ (github.ref == 'refs/heads/master' && github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
-      #  run: |
-      #    echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      #    cd ${{ env.FOLDER }}
-      #    bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag "${{ matrix.TAG }}" --arch "aarch64" --push
-      #  env: 
-      #    DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      #    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker build
-        if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' || (github.event_name == 'workflow_dispatch') }}
+      - name: Docker build and push
+        if: ${{ (github.ref == 'refs/heads/master' && github.event_name == 'push') || (github.event_name == 'workflow_dispatch') }}
         run: |
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           cd ${{ env.FOLDER }}
-          bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag ${{ matrix.TAG }} --arch aarch64
+          bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag "${{ matrix.TAG }}" --arch "aarch64" --push
+        env: 
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      #- name: Docker build
+      #  if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' || (github.event_name == 'workflow_dispatch') }}
+      #  run: |
+      #    cd ${{ env.FOLDER }}
+      #    bash build.sh --ols ${{ env.OLS_VERSION }} --php ${{ matrix.PHP_VERSION }} --tag ${{ matrix.TAG }} --arch aarch64
