--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -6,12 +6,17 @@ ARG TARGETPLATFORM
 
 RUN apt-get update && apt-get install wget curl cron tzdata -y
 
-RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then ARCH=x86_64 \
-    elif [ "$TARGETPLATFORM" = "linux/arm64" ]; then ARCH=aarch64 \
-    else echo "$TARGETPLATFORM is not supported"; exit 1; fi \
-    wget https://openlitespeed.org/packages/openlitespeed-$OLS_VERSION-$ARCH-linux.tgz && \
-    tar xzf openlitespeed-$OLS_VERSION-$ARCH-linux.tgz && cd openlitespeed && ./install.sh && \
-    echo 'cloud-docker' > /usr/local/lsws/PLAT && rm -rf /openlitespeed && rm /openlitespeed-$OLS_VERSION-$ARCH-linux.tgz
+RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then \
+        wget https://openlitespeed.org/packages/openlitespeed-$OLS_VERSION-x86_64-linux.tgz && \
+        tar xzf openlitespeed-$OLS_VERSION-x86_64-linux.tgz && cd openlitespeed && ./install.sh && \
+        echo 'cloud-docker' > /usr/local/lsws/PLAT && rm -rf /openlitespeed && rm /openlitespeed-$OLS_VERSION-x86_64-linux.tgz; \
+    elif [ "$TARGETPLATFORM" = "linux/arm64" ]; then \
+        wget https://openlitespeed.org/packages/openlitespeed-$OLS_VERSION-aarch64-linux.tgz && \
+        tar xzf openlitespeed-$OLS_VERSION-aarch64-linux.tgz && cd openlitespeed && ./install.sh && \
+        echo 'cloud-docker' > /usr/local/lsws/PLAT && rm -rf /openlitespeed && rm /openlitespeed-$OLS_VERSION-aarch64-linux.tgz; \
+    else \
+        echo "$TARGETPLATFORM is not supported"; \
+    fi
 
 RUN wget -O - https://repo.litespeed.sh | bash
 
