--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -41,6 +41,7 @@ ENV PATH="/usr/local/sbin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin"
 ADD docker.conf /usr/local/lsws/conf/templates/docker.conf
 ADD setup_docker.sh /usr/local/lsws/bin/setup_docker.sh
 ADD htpasswd /usr/local/lsws/admin/conf/htpasswd
+ADD phpini_update.sh /opt/phpini_update.sh
 
 RUN /usr/local/lsws/bin/setup_docker.sh && rm /usr/local/lsws/bin/setup_docker.sh
 RUN chown 994:994 /usr/local/lsws/conf -R
@@ -51,6 +52,7 @@ RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/loca
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp8* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp8 /usr/local/lsws/fcgi-bin/lsphp; fi"]
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/$PHP_VERSION/bin/lsphp /usr/local/lsws/fcgi-bin/lsphp7; fi"]
 RUN ["/bin/bash", "-c", "if [[ $PHP_VERSION == lsphp7* ]]; then ln -sf /usr/local/lsws/fcgi-bin/lsphp7 /usr/local/lsws/fcgi-bin/lsphp; fi"]
+RUN /opt/phpini_update.sh && rm /opt/phpini_update.sh
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
